tests/dom/dom.exp
Error -------------------------------------------------------------------------------- CanvasRenderingContext2D.js:11:16

Cannot call `ctx.moveTo` with `'0'` bound to `x` because string [1] is incompatible with number [2].

   CanvasRenderingContext2D.js:11:16
     11|     ctx.moveTo('0', '1');  // error: should be numbers
                        ^^^ [1]

References:
   <BUILTINS>/dom.js:1912:13
   1912|   moveTo(x: number, y: number): void;
                     ^^^^^^ [2]


Error -------------------------------------------------------------------------------- CanvasRenderingContext2D.js:11:21

Cannot call `ctx.moveTo` with `'1'` bound to `y` because string [1] is incompatible with number [2].

   CanvasRenderingContext2D.js:11:21
     11|     ctx.moveTo('0', '1');  // error: should be numbers
                             ^^^ [1]

References:
   <BUILTINS>/dom.js:1912:24
   1912|   moveTo(x: number, y: number): void;
                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ ClipboardEvent.js:10:45

Cannot call `ClipboardEvent` with `'invalid'` bound to `type` because string [1] is incompatible with enum [2].

   ClipboardEvent.js:10:45
    10|     const invalidEvent = new ClipboardEvent('invalid'); // invalid
                                                    ^^^^^^^^^ [1]

References:
   <BUILTINS>/dom.js:489:21
   489|   constructor(type: ClipboardEventTypes, eventInit?: ClipboardEvent$Init): void;
                            ^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- ClipboardEvent.js:25:7

Cannot call `ClipboardEvent` with object literal bound to `eventInit` because property `clipboardData` is missing in
object literal [1] but exists in object type [2].

   ClipboardEvent.js:25:7
    25|       {}, // invalid, clipboardData may not be omitted
              ^^ [1]

References:
   <BUILTINS>/dom.js:484:41
                                                v
   484| type ClipboardEvent$Init = Event$Init & {
   485|   clipboardData: DataTransfer | null;
   486| };
        ^ [2]


Error ------------------------------------------------------------------------------------------ ClipboardEvent.js:27:48

Cannot call `ClipboardEvent` with object literal bound to `eventInit` because object literal [1] is incompatible with
`DataTransfer` [2] in property `clipboardData`.

   ClipboardEvent.js:27:48
                                                       v----------------
    27|     const invalid2 = new ClipboardEvent('cut', {clipboardData: {
    28|       'text/plain': 'thats not how you do it'}}); // invalid
              ----------------------------------------^

References:
   ClipboardEvent.js:27:64
                                                                       v
    27|     const invalid2 = new ClipboardEvent('cut', {clipboardData: {
    28|       'text/plain': 'thats not how you do it'}}); // invalid
              ---------------------------------------^ [1]
   <BUILTINS>/dom.js:485:18
   485|   clipboardData: DataTransfer | null;
                         ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- ClipboardEvent.js:32:7

Cannot call `e.clipboardData.getData` because property `getData` is missing in null or undefined [1].

   ClipboardEvent.js:32:7
    32|       e.clipboardData.getData('text/plain'); // invalid: null check required
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:490:19
   490|   +clipboardData: ?DataTransfer; // readonly
                          ^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- Element.js:14:28

Cannot call `element.scrollIntoView` with object literal bound to `arg` because string [1] is incompatible with enum [2]
in property `behavior`.

   Element.js:14:28
     14|     element.scrollIntoView({ behavior: 'invalid' });
                                    ^^^^^^^^^^^^^^^^^^^^^^^

References:
   Element.js:14:40
     14|     element.scrollIntoView({ behavior: 'invalid' });
                                                ^^^^^^^^^ [1]
   <BUILTINS>/dom.js:1381:49
   1381|   scrollIntoView(arg?: (boolean | { behavior?: ('auto' | 'instant' | 'smooth'), block?: ('start' | 'center' | 'end' | 'nearest'), inline?: ('start' | 'center' | 'end' | 'nearest')  })): void;
                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Element.js:15:28

Cannot call `element.scrollIntoView` with object literal bound to `arg` because string [1] is incompatible with enum [2]
in property `block`.

   Element.js:15:28
     15|     element.scrollIntoView({ block: 'invalid' });
                                    ^^^^^^^^^^^^^^^^^^^^

References:
   Element.js:15:37
     15|     element.scrollIntoView({ block: 'invalid' });
                                             ^^^^^^^^^ [1]
   <BUILTINS>/dom.js:1381:90
   1381|   scrollIntoView(arg?: (boolean | { behavior?: ('auto' | 'instant' | 'smooth'), block?: ('start' | 'center' | 'end' | 'nearest'), inline?: ('start' | 'center' | 'end' | 'nearest')  })): void;
                                                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Element.js:16:28

Cannot call `element.scrollIntoView` with `1` bound to `arg` because number [1] is incompatible with boolean [2].

   Element.js:16:28
     16|     element.scrollIntoView(1);
                                    ^ [1]

References:
   <BUILTINS>/dom.js:1381:25
   1381|   scrollIntoView(arg?: (boolean | { behavior?: ('auto' | 'instant' | 'smooth'), block?: ('start' | 'center' | 'end' | 'nearest'), inline?: ('start' | 'center' | 'end' | 'nearest')  })): void;
                                 ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- HTMLCollection.js:10:1

Cannot get `el.className` because property `className` is missing in null [1].

   HTMLCollection.js:10:1
    10| el.className // invalid
        ^^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:589:56
   589|   item(nameOrIndex?: any, optionalIndex?: any): Elem | null;
                                                               ^^^^ [1]


Error ------------------------------------------------------------------------------------------- HTMLCollection.js:14:1

Cannot get `el.className` because property `className` is missing in null [1].

   HTMLCollection.js:14:1
    14| el.className // invalid
        ^^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:590:35
   590|   namedItem(name: string): Elem | null;
                                          ^^^^ [1]


Error --------------------------------------------------------------------------------------------- HTMLElement.js:14:28

Cannot call `element.scrollIntoView` with object literal bound to `arg` because string [1] is incompatible with enum [2]
in property `behavior`.

   HTMLElement.js:14:28
     14|     element.scrollIntoView({ behavior: 'invalid' });
                                    ^^^^^^^^^^^^^^^^^^^^^^^

References:
   HTMLElement.js:14:40
     14|     element.scrollIntoView({ behavior: 'invalid' });
                                                ^^^^^^^^^ [1]
   <BUILTINS>/dom.js:1381:49
   1381|   scrollIntoView(arg?: (boolean | { behavior?: ('auto' | 'instant' | 'smooth'), block?: ('start' | 'center' | 'end' | 'nearest'), inline?: ('start' | 'center' | 'end' | 'nearest')  })): void;
                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- HTMLElement.js:15:28

Cannot call `element.scrollIntoView` with object literal bound to `arg` because string [1] is incompatible with enum [2]
in property `block`.

   HTMLElement.js:15:28
     15|     element.scrollIntoView({ block: 'invalid' });
                                    ^^^^^^^^^^^^^^^^^^^^

References:
   HTMLElement.js:15:37
     15|     element.scrollIntoView({ block: 'invalid' });
                                             ^^^^^^^^^ [1]
   <BUILTINS>/dom.js:1381:90
   1381|   scrollIntoView(arg?: (boolean | { behavior?: ('auto' | 'instant' | 'smooth'), block?: ('start' | 'center' | 'end' | 'nearest'), inline?: ('start' | 'center' | 'end' | 'nearest')  })): void;
                                                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- HTMLElement.js:16:28

Cannot call `element.scrollIntoView` with `1` bound to `arg` because number [1] is incompatible with boolean [2].

   HTMLElement.js:16:28
     16|     element.scrollIntoView(1);
                                    ^ [1]

References:
   <BUILTINS>/dom.js:1381:25
   1381|   scrollIntoView(arg?: (boolean | { behavior?: ('auto' | 'instant' | 'smooth'), block?: ('start' | 'center' | 'end' | 'nearest'), inline?: ('start' | 'center' | 'end' | 'nearest')  })): void;
                                 ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ HTMLFormElement.js:23:1

Cannot get `el.className` because property `className` is missing in null [1].

   HTMLFormElement.js:23:1
     23| el.className // invalid
         ^^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:2840:43
   2840|   [index: number | string]: HTMLElement | null;
                                                   ^^^^ [1]


Error ------------------------------------------------------------------------------------------ HTMLFormElement.js:27:1

Cannot get `el.className` because property `className` is missing in null [1].

   HTMLFormElement.js:27:1
     27| el.className // invalid
         ^^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:2840:43
   2840|   [index: number | string]: HTMLElement | null;
                                                   ^^^^ [1]


Error ------------------------------------------------------------------------------------------ HTMLInputElement.js:7:5

Cannot call `el.setRangeText` because number [1] is incompatible with undefined [2].

   HTMLInputElement.js:7:5
      7|     el.setRangeText('foo', 123); // end is required
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   HTMLInputElement.js:7:28
      7|     el.setRangeText('foo', 123); // end is required
                                    ^^^ [1]
   <BUILTINS>/dom.js:3181:45
   3181|   setRangeText(replacement: string, start?: void, end?: void, selectMode?: void): void;
                                                     ^^^^ [2]


Error ----------------------------------------------------------------------------------------- HTMLInputElement.js:10:5

Cannot call `el.setRangeText` because string [1] is incompatible with enum [2].

   HTMLInputElement.js:10:5
     10|     el.setRangeText('foo', 123, 234, 'bogus'); // invalid value
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   HTMLInputElement.js:10:38
     10|     el.setRangeText('foo', 123, 234, 'bogus'); // invalid value
                                              ^^^^^^^ [1]
   <BUILTINS>/dom.js:3182:78
   3182|   setRangeText(replacement: string, start: number, end: number, selectMode?: SelectionMode): void;
                                                                                      ^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- HTMLSelectElement.js:11:1

Cannot get `form.action` because property `action` is missing in null [1].

   HTMLSelectElement.js:11:1
     11| form.action // invalid
         ^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:3242:27
   3242|   form: HTMLFormElement | null;
                                   ^^^^ [1]


Error ---------------------------------------------------------------------------------------- HTMLSelectElement.js:19:1

Cannot get `item.value` because property `value` is missing in null [1].

   HTMLSelectElement.js:19:1
     19| item.value // invalid
         ^^^^^^^^^^

References:
   <BUILTINS>/dom.js:3260:44
   3260|   item(index: number): HTMLOptionElement | null;
                                                    ^^^^ [1]


Error ---------------------------------------------------------------------------------------- HTMLSelectElement.js:22:1

Cannot get `item.value` because property `value` is missing in null [1].

   HTMLSelectElement.js:22:1
     22| item.value // invalid
         ^^^^^^^^^^

References:
   <BUILTINS>/dom.js:3261:48
   3261|   namedItem(name: string): HTMLOptionElement | null;
                                                        ^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ URL.js:8:19

Cannot get `c.path` because property `path` is missing in `URL` [1].

   URL.js:8:19
   8| const e: string = c.path; // not correct
                        ^^^^^^

References:
   URL.js:5:11
   5| const c = new URL('/docs', 'http://flowtype.org/'); // correct
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- eventtarget.js:9:6

Cannot call `target.attachEvent` because undefined [1] is not a function.

   eventtarget.js:9:6
     9|     (target.attachEvent('foo', listener): void); // invalid, may be undefined
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:206:17
   206|   attachEvent?: (type: string, listener: EventListener) => void;
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- eventtarget.js:16:6

Cannot call `target.detachEvent` because undefined [1] is not a function.

   eventtarget.js:16:6
    16|     (target.detachEvent('foo', listener): void); // invalid, may be undefined
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:219:17
   219|   detachEvent?: (type: string, listener: EventListener) => void;
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- path2d.js:16:6

Cannot call `path.arcTo` because string [1] is incompatible with number [2].

   path2d.js:16:6
     16|     (path.arcTo(0, 0, 0, 0, 10, '20', 5): void); // invalid
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   path2d.js:16:33
     16|     (path.arcTo(0, 0, 0, 0, 10, '20', 5): void); // invalid
                                         ^^^^ [1]
   <BUILTINS>/dom.js:1777:83
   1777|   arcTo(x1: number, y1: number, x2: number, y2: number, radiusX: number, radiusY: number, rotation: number): void;
                                                                                           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- registerElement.js:48:48

Cannot call `document.registerElement` with object literal bound to `options` because:
 - string [1] is incompatible with null [2] in the second argument of property `prototype.attributeChangedCallback`.
 - string [3] is incompatible with null [4] in the third argument of property `prototype.attributeChangedCallback`.

   registerElement.js:48:48
                                                       v
    48|     document.registerElement('custom-element', {
    49|       prototype: {
    50|         attributeChangedCallback(
    51|           localName: string,
    52|           oldVal: string, // Error: This might be null
    53|           newVal: string, // Error: This might be null
    54|           namespace: string) {}
    55|       },
    56|     });
            ^

References:
   registerElement.js:52:19
    52|           oldVal: string, // Error: This might be null
                          ^^^^^^ [1]
   <BUILTINS>/dom.js:605:26
   605|       oldAttributeValue: null,
                                 ^^^^ [2]
   registerElement.js:53:19
    53|           newVal: string, // Error: This might be null
                          ^^^^^^ [3]
   <BUILTINS>/dom.js:620:26
   620|       newAttributeValue: null,
                                 ^^^^ [4]


Error ------------------------------------------------------------------------------------------------ traversal.js:29:5

Cannot call `document.createNodeIterator` because:
 - Either object literal [1] is incompatible with `Attr` [2] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [3] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [4] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [5] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [6] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [7] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [8] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [9] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [10] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [11] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [12] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [13] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [14] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [15] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [16] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [17] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [18] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [19] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [20] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [21] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [22] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [23] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [24] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [25] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [26] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [27] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [28] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [29] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [30] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [31] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [32] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [33] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [34] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [35] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [36] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [37] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [38] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [39] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [40] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [41] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [42] in type argument `RootNodeT`.

   traversal.js:29:5
     29|     document.createNodeIterator({}); // invalid
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   traversal.js:29:33
     29|     document.createNodeIterator({}); // invalid
                                         ^^ [1]
   <BUILTINS>/dom.js:1033:33
   1033|   createNodeIterator<RootNodeT: Attr>(root: RootNodeT, whatToShow: 2, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Attr>;
                                         ^^^^ [2]
   <BUILTINS>/dom.js:1041:33
   1041|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 256, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Document>;
                                         ^^^^^^^^ [3]
   <BUILTINS>/dom.js:1042:33
   1042|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 257, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Document|Element>;
                                         ^^^^^^^^ [4]
   <BUILTINS>/dom.js:1043:33
   1043|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 260, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Document|Text>;
                                         ^^^^^^^^ [5]
   <BUILTINS>/dom.js:1044:33
   1044|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 261, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Document|Element|Text>;
                                         ^^^^^^^^ [6]
   <BUILTINS>/dom.js:1045:33
   1045|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 384, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Document|Comment>;
                                         ^^^^^^^^ [7]
   <BUILTINS>/dom.js:1046:33
   1046|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 385, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Document|Element|Comment>;
                                         ^^^^^^^^ [8]
   <BUILTINS>/dom.js:1047:33
   1047|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 388, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Document|Text|Comment>;
                                         ^^^^^^^^ [9]
   <BUILTINS>/dom.js:1048:33
   1048|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 389, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Document|Element|Text|Comment>;
                                         ^^^^^^^^ [10]
   <BUILTINS>/dom.js:1049:33
   1049|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 512, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType>;
                                         ^^^^^^^^ [11]
   <BUILTINS>/dom.js:1050:33
   1050|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 513, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Element>;
                                         ^^^^^^^^ [12]
   <BUILTINS>/dom.js:1051:33
   1051|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 516, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Text>;
                                         ^^^^^^^^ [13]
   <BUILTINS>/dom.js:1052:33
   1052|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 517, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Element|Text>;
                                         ^^^^^^^^ [14]
   <BUILTINS>/dom.js:1053:33
   1053|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 640, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Comment>;
                                         ^^^^^^^^ [15]
   <BUILTINS>/dom.js:1054:33
   1054|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 641, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Element|Comment>;
                                         ^^^^^^^^ [16]
   <BUILTINS>/dom.js:1055:33
   1055|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 644, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Text|Comment>;
                                         ^^^^^^^^ [17]
   <BUILTINS>/dom.js:1056:33
   1056|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 645, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Element|Text|Comment>;
                                         ^^^^^^^^ [18]
   <BUILTINS>/dom.js:1057:33
   1057|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 768, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Document>;
                                         ^^^^^^^^ [19]
   <BUILTINS>/dom.js:1058:33
   1058|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 769, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Document|Element>;
                                         ^^^^^^^^ [20]
   <BUILTINS>/dom.js:1059:33
   1059|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 772, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Document|Text>;
                                         ^^^^^^^^ [21]
   <BUILTINS>/dom.js:1060:33
   1060|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 773, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Document|Element|Text>;
                                         ^^^^^^^^ [22]
   <BUILTINS>/dom.js:1061:33
   1061|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 896, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Document|Comment>;
                                         ^^^^^^^^ [23]
   <BUILTINS>/dom.js:1062:33
   1062|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 897, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Document|Element|Comment>;
                                         ^^^^^^^^ [24]
   <BUILTINS>/dom.js:1063:33
   1063|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 900, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Document|Text|Comment>;
                                         ^^^^^^^^ [25]
   <BUILTINS>/dom.js:1064:33
   1064|   createNodeIterator<RootNodeT: Document>(root: RootNodeT, whatToShow: 901, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentType|Document|Element|Text|Comment>;
                                         ^^^^^^^^ [26]
   <BUILTINS>/dom.js:1092:33
   1092|   createNodeIterator<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1024, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentFragment>;
                                         ^^^^^^^^^^^^^^^^ [27]
   <BUILTINS>/dom.js:1093:33
   1093|   createNodeIterator<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1025, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentFragment|Element>;
                                         ^^^^^^^^^^^^^^^^ [28]
   <BUILTINS>/dom.js:1094:33
   1094|   createNodeIterator<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1028, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentFragment|Text>;
                                         ^^^^^^^^^^^^^^^^ [29]
   <BUILTINS>/dom.js:1095:33
   1095|   createNodeIterator<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1029, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentFragment|Element|Text>;
                                         ^^^^^^^^^^^^^^^^ [30]
   <BUILTINS>/dom.js:1096:33
   1096|   createNodeIterator<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1152, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentFragment|Comment>;
                                         ^^^^^^^^^^^^^^^^ [31]
   <BUILTINS>/dom.js:1097:33
   1097|   createNodeIterator<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1153, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentFragment|Element|Comment>;
                                         ^^^^^^^^^^^^^^^^ [32]
   <BUILTINS>/dom.js:1098:33
   1098|   createNodeIterator<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1156, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentFragment|Text|Comment>;
                                         ^^^^^^^^^^^^^^^^ [33]
   <BUILTINS>/dom.js:1099:33
   1099|   createNodeIterator<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1157, filter?: NodeFilterInterface): NodeIterator<RootNodeT, DocumentFragment|Element|Text|Comment>;
                                         ^^^^^^^^^^^^^^^^ [34]
   <BUILTINS>/dom.js:1112:33
   1112|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 1, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Element>;
                                         ^^^^ [35]
   <BUILTINS>/dom.js:1113:33
   1113|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 4, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Text>;
                                         ^^^^ [36]
   <BUILTINS>/dom.js:1114:33
   1114|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 5, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Element|Text>;
                                         ^^^^ [37]
   <BUILTINS>/dom.js:1115:33
   1115|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 128, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Comment>;
                                         ^^^^ [38]
   <BUILTINS>/dom.js:1116:33
   1116|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 129, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Element|Comment>;
                                         ^^^^ [39]
   <BUILTINS>/dom.js:1117:33
   1117|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 132, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Text|Comment>;
                                         ^^^^ [40]
   <BUILTINS>/dom.js:1118:33
   1118|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 133, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Text|Element|Comment>;
                                         ^^^^ [41]
   <BUILTINS>/dom.js:1129:33
   1129|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow?: number, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Node>;
                                         ^^^^ [42]


Error ------------------------------------------------------------------------------------------------ traversal.js:33:5

Cannot call `document.createTreeWalker` because:
 - Either object literal [1] is incompatible with `Attr` [2] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [3] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [4] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [5] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [6] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [7] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [8] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [9] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [10] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [11] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [12] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [13] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [14] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [15] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [16] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [17] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [18] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [19] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [20] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [21] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [22] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [23] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [24] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [25] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Document` [26] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [27] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [28] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [29] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [30] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [31] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [32] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [33] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `DocumentFragment` [34] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [35] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [36] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [37] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [38] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [39] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [40] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [41] in type argument `RootNodeT`.
 - Or object literal [1] is incompatible with `Node` [42] in type argument `RootNodeT`.

   traversal.js:33:5
     33|     document.createTreeWalker({}); // invalid
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   traversal.js:33:31
     33|     document.createTreeWalker({}); // invalid
                                       ^^ [1]
   <BUILTINS>/dom.js:1034:31
   1034|   createTreeWalker<RootNodeT: Attr>(root: RootNodeT, whatToShow: 2, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Attr>;
                                       ^^^^ [2]
   <BUILTINS>/dom.js:1065:31
   1065|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 256, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Document>;
                                       ^^^^^^^^ [3]
   <BUILTINS>/dom.js:1066:31
   1066|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 257, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Document|Element>;
                                       ^^^^^^^^ [4]
   <BUILTINS>/dom.js:1067:31
   1067|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 260, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Document|Text>;
                                       ^^^^^^^^ [5]
   <BUILTINS>/dom.js:1068:31
   1068|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 261, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Document|Element|Text>;
                                       ^^^^^^^^ [6]
   <BUILTINS>/dom.js:1069:31
   1069|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 384, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Document|Comment>;
                                       ^^^^^^^^ [7]
   <BUILTINS>/dom.js:1070:31
   1070|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 385, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Document|Element|Comment>;
                                       ^^^^^^^^ [8]
   <BUILTINS>/dom.js:1071:31
   1071|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 388, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Document|Text|Comment>;
                                       ^^^^^^^^ [9]
   <BUILTINS>/dom.js:1072:31
   1072|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 389, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Document|Element|Text|Comment>;
                                       ^^^^^^^^ [10]
   <BUILTINS>/dom.js:1073:31
   1073|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 512, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType>;
                                       ^^^^^^^^ [11]
   <BUILTINS>/dom.js:1074:31
   1074|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 513, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Element>;
                                       ^^^^^^^^ [12]
   <BUILTINS>/dom.js:1075:31
   1075|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 516, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Text>;
                                       ^^^^^^^^ [13]
   <BUILTINS>/dom.js:1076:31
   1076|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 517, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Element|Text>;
                                       ^^^^^^^^ [14]
   <BUILTINS>/dom.js:1077:31
   1077|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 640, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Comment>;
                                       ^^^^^^^^ [15]
   <BUILTINS>/dom.js:1078:31
   1078|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 641, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Element|Comment>;
                                       ^^^^^^^^ [16]
   <BUILTINS>/dom.js:1079:31
   1079|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 644, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Text|Comment>;
                                       ^^^^^^^^ [17]
   <BUILTINS>/dom.js:1080:31
   1080|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 645, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Element|Text|Comment>;
                                       ^^^^^^^^ [18]
   <BUILTINS>/dom.js:1081:31
   1081|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 768, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Document>;
                                       ^^^^^^^^ [19]
   <BUILTINS>/dom.js:1082:31
   1082|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 769, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Document|Element>;
                                       ^^^^^^^^ [20]
   <BUILTINS>/dom.js:1083:31
   1083|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 772, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Document|Text>;
                                       ^^^^^^^^ [21]
   <BUILTINS>/dom.js:1084:31
   1084|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 773, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Document|Element|Text>;
                                       ^^^^^^^^ [22]
   <BUILTINS>/dom.js:1085:31
   1085|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 896, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Document|Comment>;
                                       ^^^^^^^^ [23]
   <BUILTINS>/dom.js:1086:31
   1086|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 897, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Document|Element|Comment>;
                                       ^^^^^^^^ [24]
   <BUILTINS>/dom.js:1087:31
   1087|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 900, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Document|Text|Comment>;
                                       ^^^^^^^^ [25]
   <BUILTINS>/dom.js:1088:31
   1088|   createTreeWalker<RootNodeT: Document>(root: RootNodeT, whatToShow: 901, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentType|Document|Element|Text|Comment>;
                                       ^^^^^^^^ [26]
   <BUILTINS>/dom.js:1100:31
   1100|   createTreeWalker<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1024, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentFragment>;
                                       ^^^^^^^^^^^^^^^^ [27]
   <BUILTINS>/dom.js:1101:31
   1101|   createTreeWalker<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1025, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentFragment|Element>;
                                       ^^^^^^^^^^^^^^^^ [28]
   <BUILTINS>/dom.js:1102:31
   1102|   createTreeWalker<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1028, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentFragment|Text>;
                                       ^^^^^^^^^^^^^^^^ [29]
   <BUILTINS>/dom.js:1103:31
   1103|   createTreeWalker<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1029, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentFragment|Element|Text>;
                                       ^^^^^^^^^^^^^^^^ [30]
   <BUILTINS>/dom.js:1104:31
   1104|   createTreeWalker<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1152, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentFragment|Comment>;
                                       ^^^^^^^^^^^^^^^^ [31]
   <BUILTINS>/dom.js:1105:31
   1105|   createTreeWalker<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1153, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentFragment|Element|Comment>;
                                       ^^^^^^^^^^^^^^^^ [32]
   <BUILTINS>/dom.js:1106:31
   1106|   createTreeWalker<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1156, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentFragment|Text|Comment>;
                                       ^^^^^^^^^^^^^^^^ [33]
   <BUILTINS>/dom.js:1107:31
   1107|   createTreeWalker<RootNodeT: DocumentFragment>(root: RootNodeT, whatToShow: 1157, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, DocumentFragment|Element|Text|Comment>;
                                       ^^^^^^^^^^^^^^^^ [34]
   <BUILTINS>/dom.js:1119:31
   1119|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 1, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Element>;
                                       ^^^^ [35]
   <BUILTINS>/dom.js:1120:31
   1120|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 4, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Text>;
                                       ^^^^ [36]
   <BUILTINS>/dom.js:1121:31
   1121|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 5, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Element|Text>;
                                       ^^^^ [37]
   <BUILTINS>/dom.js:1122:31
   1122|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 128, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Comment>;
                                       ^^^^ [38]
   <BUILTINS>/dom.js:1123:31
   1123|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 129, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Element|Comment>;
                                       ^^^^ [39]
   <BUILTINS>/dom.js:1124:31
   1124|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 132, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Text|Comment>;
                                       ^^^^ [40]
   <BUILTINS>/dom.js:1125:31
   1125|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 133, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Text|Element|Comment>;
                                       ^^^^ [41]
   <BUILTINS>/dom.js:1130:31
   1130|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow?: number, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Node>;
                                       ^^^^ [42]


Error ---------------------------------------------------------------------------------------------- traversal.js:186:52

Cannot call `document.createNodeIterator` with function bound to `filter` because string [1] is incompatible with
enum [2] in the return value.

   traversal.js:186:52
    186|     document.createNodeIterator(document_body, -1, node => 'accept'); // invalid
                                                            ^^^^^^^^^^^^^^^^

References:
   traversal.js:186:60
    186|     document.createNodeIterator(document_body, -1, node => 'accept'); // invalid
                                                                    ^^^^^^^^ [1]
   <BUILTINS>/dom.js:3724:1
         v--------------------------------
   3724| typeof NodeFilter.FILTER_ACCEPT |
   3725| typeof NodeFilter.FILTER_REJECT |
   3726| typeof NodeFilter.FILTER_SKIP;
         ----------------------------^ [2]


Error ---------------------------------------------------------------------------------------------- traversal.js:188:52

Cannot call `document.createNodeIterator` with object literal bound to `filter` because string [1] is incompatible with
enum [2] in the return value of property `acceptNode`.

   traversal.js:188:52
    188|     document.createNodeIterator(document_body, -1, { acceptNode: node => 'accept' }); // invalid
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   traversal.js:188:74
    188|     document.createNodeIterator(document_body, -1, { acceptNode: node => 'accept' }); // invalid
                                                                                  ^^^^^^^^ [1]
   <BUILTINS>/dom.js:3724:1
         v--------------------------------
   3724| typeof NodeFilter.FILTER_ACCEPT |
   3725| typeof NodeFilter.FILTER_REJECT |
   3726| typeof NodeFilter.FILTER_SKIP;
         ----------------------------^ [2]


Error ----------------------------------------------------------------------------------------------- traversal.js:189:5

Cannot call `document.createNodeIterator` because:
 - Either number [1] is incompatible with number literal `1` [2].
 - Or number [1] is incompatible with number literal `4` [3].
 - Or number [1] is incompatible with number literal `5` [4].
 - Or number [1] is incompatible with number literal `128` [5].
 - Or number [1] is incompatible with number literal `129` [6].
 - Or number [1] is incompatible with number literal `132` [7].
 - Or number [1] is incompatible with number literal `133` [8].

   traversal.js:189:5
    189|     document.createNodeIterator(document_body, -1, {}); // invalid
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   traversal.js:189:48
    189|     document.createNodeIterator(document_body, -1, {}); // invalid
                                                        ^^ [1]
   <BUILTINS>/dom.js:1112:68
   1112|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 1, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Element>;
                                                                            ^ [2]
   <BUILTINS>/dom.js:1113:68
   1113|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 4, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Text>;
                                                                            ^ [3]
   <BUILTINS>/dom.js:1114:68
   1114|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 5, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Element|Text>;
                                                                            ^ [4]
   <BUILTINS>/dom.js:1115:68
   1115|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 128, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Comment>;
                                                                            ^^^ [5]
   <BUILTINS>/dom.js:1116:68
   1116|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 129, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Element|Comment>;
                                                                            ^^^ [6]
   <BUILTINS>/dom.js:1117:68
   1117|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 132, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Text|Comment>;
                                                                            ^^^ [7]
   <BUILTINS>/dom.js:1118:68
   1118|   createNodeIterator<RootNodeT: Node>(root: RootNodeT, whatToShow: 133, filter?: NodeFilterInterface): NodeIterator<RootNodeT, Text|Element|Comment>;
                                                                            ^^^ [8]


Error ---------------------------------------------------------------------------------------------- traversal.js:193:50

Cannot call `document.createTreeWalker` with function bound to `filter` because string [1] is incompatible with enum [2]
in the return value.

   traversal.js:193:50
    193|     document.createTreeWalker(document_body, -1, node => 'accept'); // invalid
                                                          ^^^^^^^^^^^^^^^^

References:
   traversal.js:193:58
    193|     document.createTreeWalker(document_body, -1, node => 'accept'); // invalid
                                                                  ^^^^^^^^ [1]
   <BUILTINS>/dom.js:3724:1
         v--------------------------------
   3724| typeof NodeFilter.FILTER_ACCEPT |
   3725| typeof NodeFilter.FILTER_REJECT |
   3726| typeof NodeFilter.FILTER_SKIP;
         ----------------------------^ [2]


Error ---------------------------------------------------------------------------------------------- traversal.js:195:50

Cannot call `document.createTreeWalker` with object literal bound to `filter` because string [1] is incompatible with
enum [2] in the return value of property `acceptNode`.

   traversal.js:195:50
    195|     document.createTreeWalker(document_body, -1, { acceptNode: node => 'accept' }); // invalid
                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   traversal.js:195:72
    195|     document.createTreeWalker(document_body, -1, { acceptNode: node => 'accept' }); // invalid
                                                                                ^^^^^^^^ [1]
   <BUILTINS>/dom.js:3724:1
         v--------------------------------
   3724| typeof NodeFilter.FILTER_ACCEPT |
   3725| typeof NodeFilter.FILTER_REJECT |
   3726| typeof NodeFilter.FILTER_SKIP;
         ----------------------------^ [2]


Error ----------------------------------------------------------------------------------------------- traversal.js:196:5

Cannot call `document.createTreeWalker` because:
 - Either number [1] is incompatible with number literal `1` [2].
 - Or number [1] is incompatible with number literal `4` [3].
 - Or number [1] is incompatible with number literal `5` [4].
 - Or number [1] is incompatible with number literal `128` [5].
 - Or number [1] is incompatible with number literal `129` [6].
 - Or number [1] is incompatible with number literal `132` [7].
 - Or number [1] is incompatible with number literal `133` [8].

   traversal.js:196:5
    196|     document.createTreeWalker(document_body, -1, {}); // invalid
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   traversal.js:196:46
    196|     document.createTreeWalker(document_body, -1, {}); // invalid
                                                      ^^ [1]
   <BUILTINS>/dom.js:1119:66
   1119|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 1, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Element>;
                                                                          ^ [2]
   <BUILTINS>/dom.js:1120:66
   1120|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 4, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Text>;
                                                                          ^ [3]
   <BUILTINS>/dom.js:1121:66
   1121|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 5, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Element|Text>;
                                                                          ^ [4]
   <BUILTINS>/dom.js:1122:66
   1122|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 128, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Comment>;
                                                                          ^^^ [5]
   <BUILTINS>/dom.js:1123:66
   1123|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 129, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Element|Comment>;
                                                                          ^^^ [6]
   <BUILTINS>/dom.js:1124:66
   1124|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 132, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Text|Comment>;
                                                                          ^^^ [7]
   <BUILTINS>/dom.js:1125:66
   1125|   createTreeWalker<RootNodeT: Node>(root: RootNodeT, whatToShow: 133, filter?: NodeFilterInterface, entityReferenceExpansion?: boolean): TreeWalker<RootNodeT, Text|Element|Comment>;
                                                                          ^^^ [8]



Found 35 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
